--- a/food_list/Base.lproj/Main.storyboard
+++ b/food_list/Base.lproj/Main.storyboard
@@ -21,15 +21,15 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="100" id="lP2-wn-Z8K">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="100"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FoodCell" rowHeight="99" id="lP2-wn-Z8K" customClass="FoodTableViewCell" customModule="food_list" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="99"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lP2-wn-Z8K" id="btc-11-JMR">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lP2-wn-Z8K" id="btc-11-JMR" customClass="FooodView">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ayran" translatesAutoresizingMaskIntoConstraints="NO" id="kpi-29-w4N">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="99"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="hQt-iU-SUf"/>
                                                     </constraints>
@@ -51,6 +51,9 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="Sipariş Ver"/>
+                                                    <connections>
+                                                        <action selector="toGiveOrder:" destination="lP2-wn-Z8K" eventType="touchUpInside" id="Q0P-7n-h9W"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -64,6 +67,11 @@
                                                 <constraint firstItem="kpi-29-w4N" firstAttribute="centerY" secondItem="btc-11-JMR" secondAttribute="centerY" id="msc-bH-LHm"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="foodImage" destination="kpi-29-w4N" id="vhL-gG-Jcz"/>
+                                            <outlet property="foodName" destination="rwh-0M-6EN" id="ypp-Y2-CMN"/>
+                                            <outlet property="foodPrice" destination="AYL-Dc-HN0" id="LAI-s8-hbb"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -77,6 +85,9 @@
                             <constraint firstItem="YjA-pu-aji" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yh7-GJ-f6J"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="foodTableView" destination="YjA-pu-aji" id="nQC-4w-dhw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
